parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     type_specifier -> INT
Rule 3     type_specifier -> CHAR
Rule 4     type_specifier -> FLOAT
Rule 5     type_specifier -> VOID
Rule 6     params -> type_specifier ID
Rule 7     params -> type_specifier ID COMMA params
Rule 8     declaration -> type_specifier ID SEMICOLON
Rule 9     declaration -> type_specifier ID LPAREN params RPAREN SEMICOLON
Rule 10    declaration -> type_specifier ID LPAREN params RPAREN LBRACE program RBRACE
Rule 11    declaration -> type_specifier ID LBRACE program RBRACE
Rule 12    declaration -> type_specifier ID LBRACE program RBRACE SEMICOLON
Rule 13    declaration -> type_specifier ID LBRACE RBRACE
Rule 14    statements -> statement
Rule 15    statements -> declaration
Rule 16    statements -> statement statements
Rule 17    statements -> declaration statements
Rule 18    statement -> IF LPAREN expression RPAREN LBRACE program RBRACE
Rule 19    statement -> IF LPAREN expression RPAREN LBRACE program RBRACE ELSE LBRACE program RBRACE
Rule 20    statement -> WHILE LPAREN expression RPAREN LBRACE program RBRACE
Rule 21    statement -> FOR LPAREN assignment SEMICOLON expression SEMICOLON assignment RPAREN LBRACE program RBRACE
Rule 22    statement -> ID EQUALS expression SEMICOLON
Rule 23    statement -> SWITCH LPAREN expression RPAREN LBRACE CASE NUMBER COLON program BREAK SEMICOLON DEFAULT COLON program RBRACE
Rule 24    expression -> expression PLUS expression
Rule 25    expression -> expression MINUS expression
Rule 26    expression -> expression MUL expression
Rule 27    expression -> expression DIVIDE expression
Rule 28    expression -> LPAREN expression RPAREN
Rule 29    expression -> expression LESSTHAN expression
Rule 30    expression -> expression GREATERTHAN expression
Rule 31    expression -> expression LESSTHANEQ expression
Rule 32    expression -> expression GREATERTHANEQ expression
Rule 33    expression -> expression DEQUALS expression
Rule 34    expression -> ID
Rule 35    expression -> NUMBER
Rule 36    assignment -> ID EQUALS expression

Terminals, with rules where they appear

BREAK                : 23
CASE                 : 23
CHAR                 : 3
COLON                : 23 23
COMMA                : 7
DEFAULT              : 23
DEQUALS              : 33
DIVIDE               : 27
ELSE                 : 19
EQUALS               : 22 36
FLOAT                : 4
FOR                  : 21
GREATERTHAN          : 30
GREATERTHANEQ        : 32
ID                   : 6 7 8 9 10 11 12 13 22 34 36
IF                   : 18 19
INT                  : 2
LBRACE               : 10 11 12 13 18 19 19 20 21 23
LESSTHAN             : 29
LESSTHANEQ           : 31
LPAREN               : 9 10 18 19 20 21 23 28
MINUS                : 25
MUL                  : 26
NUMBER               : 23 35
PLUS                 : 24
RBRACE               : 10 11 12 13 18 19 19 20 21 23
RPAREN               : 9 10 18 19 20 21 23 28
SEMICOLON            : 8 9 12 21 21 22 23
SWITCH               : 23
VOID                 : 5
WHILE                : 20
error                : 

Nonterminals, with rules where they appear

assignment           : 21 21
declaration          : 15 17
expression           : 18 19 20 21 22 23 24 24 25 25 26 26 27 27 28 29 29 30 30 31 31 32 32 33 33 36
params               : 7 9 10
program              : 10 11 12 18 19 19 20 21 23 23 0
statement            : 14 16
statements           : 1 16 17
type_specifier       : 6 7 8 9 10 11 12 13

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (14) statements -> . statement
    (15) statements -> . declaration
    (16) statements -> . statement statements
    (17) statements -> . declaration statements
    (18) statement -> . IF LPAREN expression RPAREN LBRACE program RBRACE
    (19) statement -> . IF LPAREN expression RPAREN LBRACE program RBRACE ELSE LBRACE program RBRACE
    (20) statement -> . WHILE LPAREN expression RPAREN LBRACE program RBRACE
    (21) statement -> . FOR LPAREN assignment SEMICOLON expression SEMICOLON assignment RPAREN LBRACE program RBRACE
    (22) statement -> . ID EQUALS expression SEMICOLON
    (23) statement -> . SWITCH LPAREN expression RPAREN LBRACE CASE NUMBER COLON program BREAK SEMICOLON DEFAULT COLON program RBRACE
    (8) declaration -> . type_specifier ID SEMICOLON
    (9) declaration -> . type_specifier ID LPAREN params RPAREN SEMICOLON
    (10) declaration -> . type_specifier ID LPAREN params RPAREN LBRACE program RBRACE
    (11) declaration -> . type_specifier ID LBRACE program RBRACE
    (12) declaration -> . type_specifier ID LBRACE program RBRACE SEMICOLON
    (13) declaration -> . type_specifier ID LBRACE RBRACE
    (2) type_specifier -> . INT
    (3) type_specifier -> . CHAR
    (4) type_specifier -> . FLOAT
    (5) type_specifier -> . VOID

    IF              shift and go to state 5
    WHILE           shift and go to state 6
    FOR             shift and go to state 7
    ID              shift and go to state 8
    SWITCH          shift and go to state 9
    INT             shift and go to state 11
    CHAR            shift and go to state 12
    FLOAT           shift and go to state 13
    VOID            shift and go to state 14

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    declaration                    shift and go to state 4
    type_specifier                 shift and go to state 10

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .

    $end            reduce using rule 1 (program -> statements .)
    RBRACE          reduce using rule 1 (program -> statements .)
    BREAK           reduce using rule 1 (program -> statements .)


state 3

    (14) statements -> statement .
    (16) statements -> statement . statements
    (14) statements -> . statement
    (15) statements -> . declaration
    (16) statements -> . statement statements
    (17) statements -> . declaration statements
    (18) statement -> . IF LPAREN expression RPAREN LBRACE program RBRACE
    (19) statement -> . IF LPAREN expression RPAREN LBRACE program RBRACE ELSE LBRACE program RBRACE
    (20) statement -> . WHILE LPAREN expression RPAREN LBRACE program RBRACE
    (21) statement -> . FOR LPAREN assignment SEMICOLON expression SEMICOLON assignment RPAREN LBRACE program RBRACE
    (22) statement -> . ID EQUALS expression SEMICOLON
    (23) statement -> . SWITCH LPAREN expression RPAREN LBRACE CASE NUMBER COLON program BREAK SEMICOLON DEFAULT COLON program RBRACE
    (8) declaration -> . type_specifier ID SEMICOLON
    (9) declaration -> . type_specifier ID LPAREN params RPAREN SEMICOLON
    (10) declaration -> . type_specifier ID LPAREN params RPAREN LBRACE program RBRACE
    (11) declaration -> . type_specifier ID LBRACE program RBRACE
    (12) declaration -> . type_specifier ID LBRACE program RBRACE SEMICOLON
    (13) declaration -> . type_specifier ID LBRACE RBRACE
    (2) type_specifier -> . INT
    (3) type_specifier -> . CHAR
    (4) type_specifier -> . FLOAT
    (5) type_specifier -> . VOID

    $end            reduce using rule 14 (statements -> statement .)
    RBRACE          reduce using rule 14 (statements -> statement .)
    BREAK           reduce using rule 14 (statements -> statement .)
    IF              shift and go to state 5
    WHILE           shift and go to state 6
    FOR             shift and go to state 7
    ID              shift and go to state 8
    SWITCH          shift and go to state 9
    INT             shift and go to state 11
    CHAR            shift and go to state 12
    FLOAT           shift and go to state 13
    VOID            shift and go to state 14

    statement                      shift and go to state 3
    statements                     shift and go to state 15
    declaration                    shift and go to state 4
    type_specifier                 shift and go to state 10

state 4

    (15) statements -> declaration .
    (17) statements -> declaration . statements
    (14) statements -> . statement
    (15) statements -> . declaration
    (16) statements -> . statement statements
    (17) statements -> . declaration statements
    (18) statement -> . IF LPAREN expression RPAREN LBRACE program RBRACE
    (19) statement -> . IF LPAREN expression RPAREN LBRACE program RBRACE ELSE LBRACE program RBRACE
    (20) statement -> . WHILE LPAREN expression RPAREN LBRACE program RBRACE
    (21) statement -> . FOR LPAREN assignment SEMICOLON expression SEMICOLON assignment RPAREN LBRACE program RBRACE
    (22) statement -> . ID EQUALS expression SEMICOLON
    (23) statement -> . SWITCH LPAREN expression RPAREN LBRACE CASE NUMBER COLON program BREAK SEMICOLON DEFAULT COLON program RBRACE
    (8) declaration -> . type_specifier ID SEMICOLON
    (9) declaration -> . type_specifier ID LPAREN params RPAREN SEMICOLON
    (10) declaration -> . type_specifier ID LPAREN params RPAREN LBRACE program RBRACE
    (11) declaration -> . type_specifier ID LBRACE program RBRACE
    (12) declaration -> . type_specifier ID LBRACE program RBRACE SEMICOLON
    (13) declaration -> . type_specifier ID LBRACE RBRACE
    (2) type_specifier -> . INT
    (3) type_specifier -> . CHAR
    (4) type_specifier -> . FLOAT
    (5) type_specifier -> . VOID

    $end            reduce using rule 15 (statements -> declaration .)
    RBRACE          reduce using rule 15 (statements -> declaration .)
    BREAK           reduce using rule 15 (statements -> declaration .)
    IF              shift and go to state 5
    WHILE           shift and go to state 6
    FOR             shift and go to state 7
    ID              shift and go to state 8
    SWITCH          shift and go to state 9
    INT             shift and go to state 11
    CHAR            shift and go to state 12
    FLOAT           shift and go to state 13
    VOID            shift and go to state 14

    declaration                    shift and go to state 4
    statements                     shift and go to state 16
    statement                      shift and go to state 3
    type_specifier                 shift and go to state 10

state 5

    (18) statement -> IF . LPAREN expression RPAREN LBRACE program RBRACE
    (19) statement -> IF . LPAREN expression RPAREN LBRACE program RBRACE ELSE LBRACE program RBRACE

    LPAREN          shift and go to state 17


state 6

    (20) statement -> WHILE . LPAREN expression RPAREN LBRACE program RBRACE

    LPAREN          shift and go to state 18


state 7

    (21) statement -> FOR . LPAREN assignment SEMICOLON expression SEMICOLON assignment RPAREN LBRACE program RBRACE

    LPAREN          shift and go to state 19


state 8

    (22) statement -> ID . EQUALS expression SEMICOLON

    EQUALS          shift and go to state 20


state 9

    (23) statement -> SWITCH . LPAREN expression RPAREN LBRACE CASE NUMBER COLON program BREAK SEMICOLON DEFAULT COLON program RBRACE

    LPAREN          shift and go to state 21


state 10

    (8) declaration -> type_specifier . ID SEMICOLON
    (9) declaration -> type_specifier . ID LPAREN params RPAREN SEMICOLON
    (10) declaration -> type_specifier . ID LPAREN params RPAREN LBRACE program RBRACE
    (11) declaration -> type_specifier . ID LBRACE program RBRACE
    (12) declaration -> type_specifier . ID LBRACE program RBRACE SEMICOLON
    (13) declaration -> type_specifier . ID LBRACE RBRACE

    ID              shift and go to state 22


state 11

    (2) type_specifier -> INT .

    ID              reduce using rule 2 (type_specifier -> INT .)


state 12

    (3) type_specifier -> CHAR .

    ID              reduce using rule 3 (type_specifier -> CHAR .)


state 13

    (4) type_specifier -> FLOAT .

    ID              reduce using rule 4 (type_specifier -> FLOAT .)


state 14

    (5) type_specifier -> VOID .

    ID              reduce using rule 5 (type_specifier -> VOID .)


state 15

    (16) statements -> statement statements .

    $end            reduce using rule 16 (statements -> statement statements .)
    RBRACE          reduce using rule 16 (statements -> statement statements .)
    BREAK           reduce using rule 16 (statements -> statement statements .)


state 16

    (17) statements -> declaration statements .

    $end            reduce using rule 17 (statements -> declaration statements .)
    RBRACE          reduce using rule 17 (statements -> declaration statements .)
    BREAK           reduce using rule 17 (statements -> declaration statements .)


state 17

    (18) statement -> IF LPAREN . expression RPAREN LBRACE program RBRACE
    (19) statement -> IF LPAREN . expression RPAREN LBRACE program RBRACE ELSE LBRACE program RBRACE
    (24) expression -> . expression PLUS expression
    (25) expression -> . expression MINUS expression
    (26) expression -> . expression MUL expression
    (27) expression -> . expression DIVIDE expression
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . expression LESSTHAN expression
    (30) expression -> . expression GREATERTHAN expression
    (31) expression -> . expression LESSTHANEQ expression
    (32) expression -> . expression GREATERTHANEQ expression
    (33) expression -> . expression DEQUALS expression
    (34) expression -> . ID
    (35) expression -> . NUMBER

    LPAREN          shift and go to state 23
    ID              shift and go to state 25
    NUMBER          shift and go to state 26

    expression                     shift and go to state 24

state 18

    (20) statement -> WHILE LPAREN . expression RPAREN LBRACE program RBRACE
    (24) expression -> . expression PLUS expression
    (25) expression -> . expression MINUS expression
    (26) expression -> . expression MUL expression
    (27) expression -> . expression DIVIDE expression
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . expression LESSTHAN expression
    (30) expression -> . expression GREATERTHAN expression
    (31) expression -> . expression LESSTHANEQ expression
    (32) expression -> . expression GREATERTHANEQ expression
    (33) expression -> . expression DEQUALS expression
    (34) expression -> . ID
    (35) expression -> . NUMBER

    LPAREN          shift and go to state 23
    ID              shift and go to state 25
    NUMBER          shift and go to state 26

    expression                     shift and go to state 27

state 19

    (21) statement -> FOR LPAREN . assignment SEMICOLON expression SEMICOLON assignment RPAREN LBRACE program RBRACE
    (36) assignment -> . ID EQUALS expression

    ID              shift and go to state 29

    assignment                     shift and go to state 28

state 20

    (22) statement -> ID EQUALS . expression SEMICOLON
    (24) expression -> . expression PLUS expression
    (25) expression -> . expression MINUS expression
    (26) expression -> . expression MUL expression
    (27) expression -> . expression DIVIDE expression
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . expression LESSTHAN expression
    (30) expression -> . expression GREATERTHAN expression
    (31) expression -> . expression LESSTHANEQ expression
    (32) expression -> . expression GREATERTHANEQ expression
    (33) expression -> . expression DEQUALS expression
    (34) expression -> . ID
    (35) expression -> . NUMBER

    LPAREN          shift and go to state 23
    ID              shift and go to state 25
    NUMBER          shift and go to state 26

    expression                     shift and go to state 30

state 21

    (23) statement -> SWITCH LPAREN . expression RPAREN LBRACE CASE NUMBER COLON program BREAK SEMICOLON DEFAULT COLON program RBRACE
    (24) expression -> . expression PLUS expression
    (25) expression -> . expression MINUS expression
    (26) expression -> . expression MUL expression
    (27) expression -> . expression DIVIDE expression
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . expression LESSTHAN expression
    (30) expression -> . expression GREATERTHAN expression
    (31) expression -> . expression LESSTHANEQ expression
    (32) expression -> . expression GREATERTHANEQ expression
    (33) expression -> . expression DEQUALS expression
    (34) expression -> . ID
    (35) expression -> . NUMBER

    LPAREN          shift and go to state 23
    ID              shift and go to state 25
    NUMBER          shift and go to state 26

    expression                     shift and go to state 31

state 22

    (8) declaration -> type_specifier ID . SEMICOLON
    (9) declaration -> type_specifier ID . LPAREN params RPAREN SEMICOLON
    (10) declaration -> type_specifier ID . LPAREN params RPAREN LBRACE program RBRACE
    (11) declaration -> type_specifier ID . LBRACE program RBRACE
    (12) declaration -> type_specifier ID . LBRACE program RBRACE SEMICOLON
    (13) declaration -> type_specifier ID . LBRACE RBRACE

    SEMICOLON       shift and go to state 32
    LPAREN          shift and go to state 33
    LBRACE          shift and go to state 34


state 23

    (28) expression -> LPAREN . expression RPAREN
    (24) expression -> . expression PLUS expression
    (25) expression -> . expression MINUS expression
    (26) expression -> . expression MUL expression
    (27) expression -> . expression DIVIDE expression
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . expression LESSTHAN expression
    (30) expression -> . expression GREATERTHAN expression
    (31) expression -> . expression LESSTHANEQ expression
    (32) expression -> . expression GREATERTHANEQ expression
    (33) expression -> . expression DEQUALS expression
    (34) expression -> . ID
    (35) expression -> . NUMBER

    LPAREN          shift and go to state 23
    ID              shift and go to state 25
    NUMBER          shift and go to state 26

    expression                     shift and go to state 35

state 24

    (18) statement -> IF LPAREN expression . RPAREN LBRACE program RBRACE
    (19) statement -> IF LPAREN expression . RPAREN LBRACE program RBRACE ELSE LBRACE program RBRACE
    (24) expression -> expression . PLUS expression
    (25) expression -> expression . MINUS expression
    (26) expression -> expression . MUL expression
    (27) expression -> expression . DIVIDE expression
    (29) expression -> expression . LESSTHAN expression
    (30) expression -> expression . GREATERTHAN expression
    (31) expression -> expression . LESSTHANEQ expression
    (32) expression -> expression . GREATERTHANEQ expression
    (33) expression -> expression . DEQUALS expression

    RPAREN          shift and go to state 36
    PLUS            shift and go to state 37
    MINUS           shift and go to state 38
    MUL             shift and go to state 39
    DIVIDE          shift and go to state 40
    LESSTHAN        shift and go to state 41
    GREATERTHAN     shift and go to state 42
    LESSTHANEQ      shift and go to state 43
    GREATERTHANEQ   shift and go to state 44
    DEQUALS         shift and go to state 45


state 25

    (34) expression -> ID .

    RPAREN          reduce using rule 34 (expression -> ID .)
    PLUS            reduce using rule 34 (expression -> ID .)
    MINUS           reduce using rule 34 (expression -> ID .)
    MUL             reduce using rule 34 (expression -> ID .)
    DIVIDE          reduce using rule 34 (expression -> ID .)
    LESSTHAN        reduce using rule 34 (expression -> ID .)
    GREATERTHAN     reduce using rule 34 (expression -> ID .)
    LESSTHANEQ      reduce using rule 34 (expression -> ID .)
    GREATERTHANEQ   reduce using rule 34 (expression -> ID .)
    DEQUALS         reduce using rule 34 (expression -> ID .)
    SEMICOLON       reduce using rule 34 (expression -> ID .)


state 26

    (35) expression -> NUMBER .

    RPAREN          reduce using rule 35 (expression -> NUMBER .)
    PLUS            reduce using rule 35 (expression -> NUMBER .)
    MINUS           reduce using rule 35 (expression -> NUMBER .)
    MUL             reduce using rule 35 (expression -> NUMBER .)
    DIVIDE          reduce using rule 35 (expression -> NUMBER .)
    LESSTHAN        reduce using rule 35 (expression -> NUMBER .)
    GREATERTHAN     reduce using rule 35 (expression -> NUMBER .)
    LESSTHANEQ      reduce using rule 35 (expression -> NUMBER .)
    GREATERTHANEQ   reduce using rule 35 (expression -> NUMBER .)
    DEQUALS         reduce using rule 35 (expression -> NUMBER .)
    SEMICOLON       reduce using rule 35 (expression -> NUMBER .)


state 27

    (20) statement -> WHILE LPAREN expression . RPAREN LBRACE program RBRACE
    (24) expression -> expression . PLUS expression
    (25) expression -> expression . MINUS expression
    (26) expression -> expression . MUL expression
    (27) expression -> expression . DIVIDE expression
    (29) expression -> expression . LESSTHAN expression
    (30) expression -> expression . GREATERTHAN expression
    (31) expression -> expression . LESSTHANEQ expression
    (32) expression -> expression . GREATERTHANEQ expression
    (33) expression -> expression . DEQUALS expression

    RPAREN          shift and go to state 46
    PLUS            shift and go to state 37
    MINUS           shift and go to state 38
    MUL             shift and go to state 39
    DIVIDE          shift and go to state 40
    LESSTHAN        shift and go to state 41
    GREATERTHAN     shift and go to state 42
    LESSTHANEQ      shift and go to state 43
    GREATERTHANEQ   shift and go to state 44
    DEQUALS         shift and go to state 45


state 28

    (21) statement -> FOR LPAREN assignment . SEMICOLON expression SEMICOLON assignment RPAREN LBRACE program RBRACE

    SEMICOLON       shift and go to state 47


state 29

    (36) assignment -> ID . EQUALS expression

    EQUALS          shift and go to state 48


state 30

    (22) statement -> ID EQUALS expression . SEMICOLON
    (24) expression -> expression . PLUS expression
    (25) expression -> expression . MINUS expression
    (26) expression -> expression . MUL expression
    (27) expression -> expression . DIVIDE expression
    (29) expression -> expression . LESSTHAN expression
    (30) expression -> expression . GREATERTHAN expression
    (31) expression -> expression . LESSTHANEQ expression
    (32) expression -> expression . GREATERTHANEQ expression
    (33) expression -> expression . DEQUALS expression

    SEMICOLON       shift and go to state 49
    PLUS            shift and go to state 37
    MINUS           shift and go to state 38
    MUL             shift and go to state 39
    DIVIDE          shift and go to state 40
    LESSTHAN        shift and go to state 41
    GREATERTHAN     shift and go to state 42
    LESSTHANEQ      shift and go to state 43
    GREATERTHANEQ   shift and go to state 44
    DEQUALS         shift and go to state 45


state 31

    (23) statement -> SWITCH LPAREN expression . RPAREN LBRACE CASE NUMBER COLON program BREAK SEMICOLON DEFAULT COLON program RBRACE
    (24) expression -> expression . PLUS expression
    (25) expression -> expression . MINUS expression
    (26) expression -> expression . MUL expression
    (27) expression -> expression . DIVIDE expression
    (29) expression -> expression . LESSTHAN expression
    (30) expression -> expression . GREATERTHAN expression
    (31) expression -> expression . LESSTHANEQ expression
    (32) expression -> expression . GREATERTHANEQ expression
    (33) expression -> expression . DEQUALS expression

    RPAREN          shift and go to state 50
    PLUS            shift and go to state 37
    MINUS           shift and go to state 38
    MUL             shift and go to state 39
    DIVIDE          shift and go to state 40
    LESSTHAN        shift and go to state 41
    GREATERTHAN     shift and go to state 42
    LESSTHANEQ      shift and go to state 43
    GREATERTHANEQ   shift and go to state 44
    DEQUALS         shift and go to state 45


state 32

    (8) declaration -> type_specifier ID SEMICOLON .

    IF              reduce using rule 8 (declaration -> type_specifier ID SEMICOLON .)
    WHILE           reduce using rule 8 (declaration -> type_specifier ID SEMICOLON .)
    FOR             reduce using rule 8 (declaration -> type_specifier ID SEMICOLON .)
    ID              reduce using rule 8 (declaration -> type_specifier ID SEMICOLON .)
    SWITCH          reduce using rule 8 (declaration -> type_specifier ID SEMICOLON .)
    INT             reduce using rule 8 (declaration -> type_specifier ID SEMICOLON .)
    CHAR            reduce using rule 8 (declaration -> type_specifier ID SEMICOLON .)
    FLOAT           reduce using rule 8 (declaration -> type_specifier ID SEMICOLON .)
    VOID            reduce using rule 8 (declaration -> type_specifier ID SEMICOLON .)
    $end            reduce using rule 8 (declaration -> type_specifier ID SEMICOLON .)
    RBRACE          reduce using rule 8 (declaration -> type_specifier ID SEMICOLON .)
    BREAK           reduce using rule 8 (declaration -> type_specifier ID SEMICOLON .)


state 33

    (9) declaration -> type_specifier ID LPAREN . params RPAREN SEMICOLON
    (10) declaration -> type_specifier ID LPAREN . params RPAREN LBRACE program RBRACE
    (6) params -> . type_specifier ID
    (7) params -> . type_specifier ID COMMA params
    (2) type_specifier -> . INT
    (3) type_specifier -> . CHAR
    (4) type_specifier -> . FLOAT
    (5) type_specifier -> . VOID

    INT             shift and go to state 11
    CHAR            shift and go to state 12
    FLOAT           shift and go to state 13
    VOID            shift and go to state 14

    type_specifier                 shift and go to state 51
    params                         shift and go to state 52

state 34

    (11) declaration -> type_specifier ID LBRACE . program RBRACE
    (12) declaration -> type_specifier ID LBRACE . program RBRACE SEMICOLON
    (13) declaration -> type_specifier ID LBRACE . RBRACE
    (1) program -> . statements
    (14) statements -> . statement
    (15) statements -> . declaration
    (16) statements -> . statement statements
    (17) statements -> . declaration statements
    (18) statement -> . IF LPAREN expression RPAREN LBRACE program RBRACE
    (19) statement -> . IF LPAREN expression RPAREN LBRACE program RBRACE ELSE LBRACE program RBRACE
    (20) statement -> . WHILE LPAREN expression RPAREN LBRACE program RBRACE
    (21) statement -> . FOR LPAREN assignment SEMICOLON expression SEMICOLON assignment RPAREN LBRACE program RBRACE
    (22) statement -> . ID EQUALS expression SEMICOLON
    (23) statement -> . SWITCH LPAREN expression RPAREN LBRACE CASE NUMBER COLON program BREAK SEMICOLON DEFAULT COLON program RBRACE
    (8) declaration -> . type_specifier ID SEMICOLON
    (9) declaration -> . type_specifier ID LPAREN params RPAREN SEMICOLON
    (10) declaration -> . type_specifier ID LPAREN params RPAREN LBRACE program RBRACE
    (11) declaration -> . type_specifier ID LBRACE program RBRACE
    (12) declaration -> . type_specifier ID LBRACE program RBRACE SEMICOLON
    (13) declaration -> . type_specifier ID LBRACE RBRACE
    (2) type_specifier -> . INT
    (3) type_specifier -> . CHAR
    (4) type_specifier -> . FLOAT
    (5) type_specifier -> . VOID

    RBRACE          shift and go to state 54
    IF              shift and go to state 5
    WHILE           shift and go to state 6
    FOR             shift and go to state 7
    ID              shift and go to state 8
    SWITCH          shift and go to state 9
    INT             shift and go to state 11
    CHAR            shift and go to state 12
    FLOAT           shift and go to state 13
    VOID            shift and go to state 14

    type_specifier                 shift and go to state 10
    program                        shift and go to state 53
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    declaration                    shift and go to state 4

state 35

    (28) expression -> LPAREN expression . RPAREN
    (24) expression -> expression . PLUS expression
    (25) expression -> expression . MINUS expression
    (26) expression -> expression . MUL expression
    (27) expression -> expression . DIVIDE expression
    (29) expression -> expression . LESSTHAN expression
    (30) expression -> expression . GREATERTHAN expression
    (31) expression -> expression . LESSTHANEQ expression
    (32) expression -> expression . GREATERTHANEQ expression
    (33) expression -> expression . DEQUALS expression

    RPAREN          shift and go to state 55
    PLUS            shift and go to state 37
    MINUS           shift and go to state 38
    MUL             shift and go to state 39
    DIVIDE          shift and go to state 40
    LESSTHAN        shift and go to state 41
    GREATERTHAN     shift and go to state 42
    LESSTHANEQ      shift and go to state 43
    GREATERTHANEQ   shift and go to state 44
    DEQUALS         shift and go to state 45


state 36

    (18) statement -> IF LPAREN expression RPAREN . LBRACE program RBRACE
    (19) statement -> IF LPAREN expression RPAREN . LBRACE program RBRACE ELSE LBRACE program RBRACE

    LBRACE          shift and go to state 56


state 37

    (24) expression -> expression PLUS . expression
    (24) expression -> . expression PLUS expression
    (25) expression -> . expression MINUS expression
    (26) expression -> . expression MUL expression
    (27) expression -> . expression DIVIDE expression
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . expression LESSTHAN expression
    (30) expression -> . expression GREATERTHAN expression
    (31) expression -> . expression LESSTHANEQ expression
    (32) expression -> . expression GREATERTHANEQ expression
    (33) expression -> . expression DEQUALS expression
    (34) expression -> . ID
    (35) expression -> . NUMBER

    LPAREN          shift and go to state 23
    ID              shift and go to state 25
    NUMBER          shift and go to state 26

    expression                     shift and go to state 57

state 38

    (25) expression -> expression MINUS . expression
